Simplify db_connector no need for threads since its I/O work, coroutine will scale

--- a/dwh-etl-pipeline/requirements.txt
+++ b/dwh-etl-pipeline/requirements.txt
@@ -1,3 +1,5 @@
-requests
-pandas
-httpx
+aiofiles==24.1.0
+asyncpg==0.30.0
+httpx==0.28.1
+mysql_connector_repackaged==0.3.1
+psycopg2-binary==2.9.10
