--- a/dwh-etl-pipeline/requirements.txt
+++ b/dwh-etl-pipeline/requirements.txt
@@ -1,6 +1,22 @@
 aiofiles==24.1.0
+anyio==4.10.0
 asyncpg==0.30.0
+certifi==2025.8.3
+charset-normalizer==3.4.2
+docopt==0.6.2
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.28.1
-mysql_connector_repackaged==0.3.1
+idna==3.10
+iniconfig==2.1.0
+mysql-connector-repackaged==0.3.1
+packaging==25.0
+pipreqs==0.4.13
+pluggy==1.6.0
 psycopg2-binary==2.9.10
+Pygments==2.19.2
 pytest==8.4.1
+requests==2.32.4
+sniffio==1.3.1
+urllib3==2.5.0
+yarg==0.1.10
